--- a/css/adventure.css
+++ b/css/adventure.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image:url('../images/forest.jpg');
+    background-image:url('../images/DD2.jpg');
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
 }
