--- a/css/adventure.css
+++ b/css/adventure.css
@@ -1,8 +1,8 @@
 
 body{
-    background-image:url('../images/forest.jpg');
-    /*background-repeat:no-repeat;*/
-    /*background-position: cover;*/
+    background-image:url('../images/dungeons-dragons-dice-roller.jpg');
+    background-repeat:no-repeat;
+    background-size: cover;
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
 }
@@ -31,7 +31,7 @@ text-align:center;
     transform: translateY(-50%) translateX(-50%);
     left: 50%;
     position: absolute !important;
-    background-color:#FFD6A8;
+    background-color:#f9bc5a;
 }
 .situation-text{
     display:block;
